# SingleCrystalCpp

./: .gitignore  .nvim.lua  .vimspector.json  CMakeLists.txt  CMakeLists_example.txt  FCC_111.txt  FCC_111_disvel.txt  Grain.cpp  Load.txt  PMode.cpp  README.md  SingleX.txt  Slip.cpp  Twin.cpp  dislocation_evolution.cpp  disvel.cpp  func.cpp  global.cpp  load.cpp  main.cpp  read_input.cpp  singleX.h  write_output.cpp
SXfiles/: SingleX-ddhard.txt  SingleX-disvel.txt  SingleX-mg.txt
debug/: Config.txt  Load.txt  SingleX_disvel.txt  SingleX_voce.txt
docs/: [CN]数学解释Numerical Explanation.md  [CN]输入文件格式参考Input File Format.md
examples/01_VoceModel/: Schmidt_factor.csv  SingleX_voce.txt  accstrain.csv  crss_grain.csv  custom_out.csv  disloc_grain.csv  disloc_vel.csv  euler_angle_grain.csv  loadfile  rss_grain.csv  run.sh  stress_grain.csv
examples/02_DisVelModel/: Schmidt_factor.csv  SingleX_lr.txt  accstrain.csv  crss_grain.csv  custom_out.csv  disloc_grain.csv  disloc_step.csv  disloc_vel.csv  euler_angle_grain.csv  loadfile  rss_grain.csv  run.sh  stress_grain.csv  stress_step.csv  time_step.csv
input file/: SingleX_lr.txt  SingleX_voce.txt  loadfile
pythonscript/: calc_interaction.py  orientation_calc.py  plot_case.py  plot_euler.py
